# docs/swagger/swagger.yaml
@@ -67,6 +67,8 @@ definitions:
         type: integer
       ip_region:
         type: string
+      is_ai_assistant:
+        type: boolean
       is_allow_reply:
         type: boolean
       is_collapsed:
@@ -212,6 +214,8 @@ definitions:
       id:
         type: integer
       is_admin:
+        type: boolean
+      is_ai_assistant:
         type: boolean
       link:
         type: string
@@ -792,6 +796,10 @@ definitions:
     type: object
   handler.ResponseCommentList:
     properties:
+      ai_comments:
+        items:
+          $ref: '#/definitions/entity.CookedComment'
+        type: array
       comments:
         items:
           $ref: '#/definitions/entity.CookedComment'
@@ -1680,6 +1688,10 @@ paths:
         in: query
         name: search
         type: string
+      - description: Return AI assistant comments separately
+        in: query
+        name: split_ai
+        type: boolean
       - description: The site name of your content scope
         in: query
         name: site_name
